--- a/location.css
+++ b/location.css
@@ -45,19 +45,19 @@
 }
 
 h1 {
-    font-family: Arial;
+    font-family: 'Montserrat', sans-serif;
     font-size: 65px;
     text-align: center;
     color: white;
 }
 
 h2 {
-    font-family: Arial;
+    font-family: 'Montserrat', sans-serif;
     color: white;
 }
 
 h3 {
-    font-family: Arial;
+    font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     font-size: 15px;
     color: white;
@@ -65,15 +65,15 @@ h3 {
 }
 
 p {
-    font-family: Arial;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     color: white;
 }
 
 body {
+    background: url(./Images/map.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(./Images/map.jpg);
+    background-attachment: fixed;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -102,4 +102,9 @@ nav {
 .icon img {
      height: 20px;
      width: 20px;    
+}
+
+#page_title h2 {
+    text-align: center;
+    font-size: 22px;
 }
