--- a/attraction.css
+++ b/attraction.css
@@ -8,7 +8,7 @@ body {
     color: white;
     background-color: #232323;
     font-family: 'Montserrat', sans-serif;
-    background-image: url('./Images/map.jpg');
+    background-image: url('./Images/city.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
