--- a/Homepage.css
+++ b/Homepage.css
@@ -1,39 +1,25 @@
 body {
-	background: url(.Images/atlas-close-up-dark-592753v3.jpg);
+	background: url(./Images/map.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 }
-.UnKnownTitle {
-    height: 600px;
-    width: 100px;
-    font-size: 40px;
-    color: black;
-    display: block;
-	height: 450px;
+
+.UnknownTitle {
+	display: table;
+	height: 400px;
 	width: 100%;
+	line-height: 2.5;
 	background: rgba(0,0,0,0.75);
 	opacity: 1;
 	animation-name: fadeIn;
 	animation-iteration-count: 1;
 	animation-timing-function: ease-out;
 	animation-duration: 3s;
-	color: white;
-	font-family: 'Montserrat', sans-serif;
-	text-align: center;
-	margin-top: 125px;
-	padding-top: 50px;
 }
 
-.UnKnownTitle h1{
-	font-size: 80px;
-}
-
-.UnKnownTitle h4 {
-	line-height: 2.5;
-}
 @keyframes fadeIn {
 	0% {
 		opacity: 0;
@@ -42,36 +28,26 @@ body {
 		opacity: 1;
 	}
 }
-.new {
-    opacity: 0;
-}
 
-.old, .new {
-    transition: opacity 0.5s linear;
-}
-
-.UnKnownTitle:hover .old {
-    opacity: 0;
-}
-.UnKnownTitle:hover .new {
-    opacity: 1;
+.UnknownTitle h1 {
+	vertical-align: middle;
+	font-size: 75px;
+	padding-top: 100px;
 }
 
 nav {
-	float: none;
-	position: relative;
 	width: 100%;
-	display: block;
-	text-align: center;
 }
-
+.container-fluid {
+	position: relative;
+	margin: 0px 150px 0px 150px;
+}
 .navbar-brand{
 	padding-top: 30px;
 }
 
-
 .LondonCarousel {
-	margin-top: 100px;
+	margin-top: 75px;
 	height: 400px;
 	width: 100%;
 	background: rgba(0,0,0,0.5);
@@ -82,8 +58,6 @@ nav {
 	height: 400px;
 	width: 100%;
 	background: rgba(0,0,0,0.5);
-	margin-bottom: 100px;
-
 }
 
 .carousel-inner > .item > img,
@@ -100,59 +74,13 @@ nav {
   }
 
 .icon img {
-  	height: 30px;
-  	width: 30px;	
+  	height: 20px;
+  	width: 20px;	
 }
-
-.icon img:hover {
-	animation-name: rotation;
-  	animation-iteration-count: infinite;
-  	animation-timing-function: linear;
-  	animation-duration: 2.5s;
+.Signup button {
+	border-radius: 12px;
+	color: gray;
 }
-
-@keyframes rotation {
-  0% {
-    transform: rotate3d(0, 1, 0, 0deg);
-  }
-  50% {
-    transform: rotate3d(0, 1, 0, 180deg);
-  }
-  100% {
-    transform: rotate3d(0, 1, 0, 360deg);
-  }
-}
-.Signup_Button {
-	height: 150px;
-	width: 100%;
-	background: rgba(255,255,255,0.20);
-	position: relative;
-	padding-top: 50px;
-	border-radius: 20px;
-}
-
-
-.Signup_Button button{
-	background: #999;
-	color: white;
-	border-radius: 10px;
-	border: 10px solid #999;
-	position:relative;
-	font-size: 20px;
-}
-
-.btn_SignUp {
-	margin-right: 75px;
-}
-
-.row {
-	padding-top: 60px;
-}
-.LondonCab {
-	padding-top: 50px;
-}
-.abs-center-x {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+.Signup input{
+	border-radius: 12px;
 }
