--- a/Homepage.css
+++ b/Homepage.css
@@ -1,5 +1,5 @@
 body {
-	background: url(./atlas-close-up-dark-592753v3.jpg);
+	background: url(atlas-close-up-dark-592753v3.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	color: white;
