--- a/location.css
+++ b/location.css
@@ -86,8 +86,10 @@ nav {
     float: none;
     position: relative;
     width: 100%;
-    display: inline-block;
+    display: block;
     text-align: center;
+    font-size: 12px;
+    padding-left: 20%;
 }
 
 .navbar-brand{
@@ -186,4 +188,53 @@ nav {
     .modal-content {
         width: 100%;
     }
+
+.active img{
+    height: 30px;
+    width: 30px;
+  }
+
+.icon img {
+    height: 30px;
+    width: 30px;    
+}
+
+.icon img:hover {
+    animation-name: rotation;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-duration: 2.5s;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate3d(0, 1, 0, 0deg);
+  }
+  50% {
+    transform: rotate3d(0, 1, 0, 180deg);
+  }
+  100% {
+    transform: rotate3d(0, 1, 0, 360deg);
+  }
+}
+
+#section03 {
+    margin-top: 100px;
+    height: 500px;
+    width: 100%;
+    background: rgba(0,0,0,0.5);
+    padding-top: 30px;
+}
+
+.row {
+    padding-top: 10px;
+
+}
+.LondonCab {
+    padding-top: 50px;
+}
+.abs-center-x {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
