--- a/location.css
+++ b/location.css
@@ -186,12 +186,12 @@ body {
 .active img{
     height: 30px;
     width: 30px;
-    text-align:center:
   }
 
 .icon img {
     height: 30px;
-    width: 30px;    
+    width: 30px;  
+    align:center:
 }
 
 .icon img:hover {
