--- a/location.css
+++ b/location.css
@@ -71,7 +71,7 @@ p {
 }
 
 body {
-    background: url(./Images/city.jpg);
+    background: url(city_purple.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
