--- a/Homepage.css
+++ b/Homepage.css
@@ -342,3 +342,8 @@ label {
   color: #fff;
   background-color: #4F2F4F;
 }
+
+.container-fluid {
+    position: relative;
+    margin: 0px 150px 0px 150px;
+}
