--- a/Homepage.css
+++ b/Homepage.css
@@ -66,6 +66,11 @@ body {
     padding-left: 100px;
 }
 
+.container-fluid {
+    position: relative;
+    margin: 0px 150px 0px 150px;
+}
+
 navbar-header {
 	padding-left: 100px;
 }
