--- a/signup.css
+++ b/signup.css
@@ -1,5 +1,5 @@
 body {
-  /*background: url(../../map_purple.jpg);*/
+  /*background: url(map_purple.jpg);*/
   background: rgba(0,0,0,0.80);
   background-size: cover;
   background-attachment: fixed;
